# unitcellengine

./: .gitattributes  .gitignore  .gitmodules  README.md  Sandbox.ipynb  pyproject.toml  requirements.in  requirements.txt  setup.py  test.npz  test.vtk  test.vtu  unitcellapp.spec
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  unitcell.analysis.rst  unitcell.geometry.rst  unitcell.mesh.rst  unitcell.rst
examples/: examples.ipynb  geometry.stl
src/unitcellengine/: __init__.py  design.py
src/unitcellengine/analysis/: homogenization.py  internal.py  material.py  multiprocess.py
src/unitcellengine/geometry/: __init__.py  gmsh.py  sdf.py
src/unitcellengine/geometry/definitions/: Body centered cubic foam.ltcx  Body centered cubic.ltcx  Columns.ltcx  Fluorite.ltcx  Hex prism central axis edge.ltcx  Hex prism diamond.ltcx  Hex prism vertex centroid.ltcx  Hexagonal honeycomb.ltcx  Re-entrant.ltcx  Simple cubic foam.ltcx  Square honeycomb rotated.ltcx  Square honeycomb.ltcx  Tet oct vertex centroid.ltcx  Triangular honeycomb rotated.ltcx  Truncated cube.ltcx  Truncated octahedron.ltcx  Weaire-Phelan.ltcx  definitions.json
src/unitcellengine/geometry/tests/: unitcellDefinition.json  unitcellGeometry.stl  unitcellProperties.json
src/unitcellengine/mesh/: gmsh.py  internal.py
src/unitcellengine/mesh/tests/: test.npz
tests/: test_unitcell.py  test_unitcellengine.py
tests/analysis/: test_homogenization.py
tests/analysis/resources/: fullyDense.e  fullyDense.npz  fullyDense_conductance_results.npz  fullyDense_elastic_results.npz  halesGyroid_0_24.npz  halesGyroid_0_24.vtu  halesGyroid_0_24_conductance_results.npz  halesSchwarz_0_23.npz  halesSchwarz_0_23_conductance_results.npz  hexHoneycomb_5x5x1.e  hexHoneycomb_5x5x1.npz  hexHoneycomb_5x5x1_elastic_results.npz  octetPatil.e  octetPatil.npz  octetPatil_elastic_results.npz
tests/geometry/: test_geometry.py
tests/geometry/resources/: unitcellGeometry.stl
unitcell/: __init__.py  design.py  utilities.py
unitcell/analysis/: homogenization.py  internal.py
unitcell/geometry/: __init__.py  gmsh.py  sdf.py
unitcell/geometry/definitions/: Column.ltcx  Diamond.ltcx  Face centered cubic foam.ltcx  Face centered cubic.ltcx  Hex prism edge.ltcx  Hex prism laves phase.ltcx  IsoTruss.ltcx  Kelvin cell.ltcx  Oct vertex centroid.ltcx  Octet.ltcx  Re-entrant honeycomb.ltcx  Simple cubic.ltcx  Triangular honeycomb.ltcx
unitcell/mesh/: gmsh.py  internal.py
